--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reiseblog Kamerun | Vincent Exsternbrink</title>
+    <title>Reiseblog Kamerun | Vincent, Falk, Nick, Ilias </title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <style>
         body {
@@ -132,7 +132,6 @@
             <li>Unterrichtsmaterial Deutscher Kolonialismus, Klasse 9</li>
             <li>Padlet zum Thema Kamerun</li>
             <li>Bundeszentrale für politische Bildung (bpb.de)</li>
-            <li>Informationen zur Geschichte Kameruns</li>
         </ul>
     </div>
 </footer>
