--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <header>
     <p style="letter-spacing: 3px; text-transform: uppercase; font-size: 0.8rem; color: #999;">Reisebericht</p>
     <h1>Reiseblog: Kamerun – Eine ehemalige deutsche Kolonie</h1>
-    <p>Von Vincent Exsternbrink</p>
+    <p>Von Vincent, Nick, Falk und Ilias</p>
 </header>
 
 <div class="container">
